src/test/deca/syntax/invalid/sansobjet/DeclaIntToBig.deca
//Erreur de compilation: entier trop grand
//Description: teste declaration incorrect nombre
//Resultats: erreur ligne 5:  int trop grand
{
    int i = 2147483648;
}
